src/test/java/br/com/syntaxerror/syntaxerror/SyntaxerrorApplicationTests.java
package br.com.syntaxerror.syntaxerror;

import org.junit.jupiter.api.Test;
import org.springframework.boot.test.context.SpringBootTest;

@SpringBootTest
class SyntaxerrorApplicationTests {

	@Test
	void contextLoads() {
	}

}
